--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,12 @@ services:
       NODE_ENV: production
     ports:
       - 8000:8000
+    depends_on:
+      - redis
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
