--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^5.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.12.7",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
