--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jest-when": "^3.5.5",
     "@types/node": "^20.12.7",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
@@ -37,6 +38,7 @@
     "concurrently": "^8.2.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "jest": "^29.7.0",
+    "jest-when": "^3.6.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
