--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run swagger && npx tsc && npm run copy-swagger-ui",
+    "build": "npm run swagger && npx tsc",
+    "serve": "node dist/index.js",
     "dev": "concurrently \"nodemon -q\" \"nodemon -q --config nodemon-swagger.json\"",
     "swagger": "tsoa spec-and-routes",
-    "copy-swagger-ui": "cp -r ./node_modules/swagger-ui-dist ./dist/src/swagger-ui-dist",
     "eslint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
     "eslint:fix": "npx eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:unit": "jest --testPathPattern=unit\\.spec\\.ts",
     "test:int": "jest --testPathPattern=int\\.spec\\.ts",
     "test:coverage": "jest --coverage",
