--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-http-context": "^1.2.4",
     "ioredis": "^5.3.2",
     "swagger-ui-express": "^5.0.0",
-    "tsoa": "^5.1.1"
+    "tsoa": "^5.1.1",
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -33,6 +36,7 @@
     "@types/node": "^20.12.7",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "concurrently": "^8.2.2",
