--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
       "max-len": ["error", 200],
       "no-console": ["error", { "allow": ["error", "info"] }],
       "@typescript-eslint/indent": ["error", 2, { "ignoredNodes": ["PropertyDefinition"], "SwitchCase": 1 }],
-      "arrow-parens": "off"
+      "arrow-parens": "off",
+      "no-useless-catch": "off"
     }
 }
